tests/tests/errors/30037-1.vb
'#compiler-message:30037-1.vb(8:13) : error BC30037: Character is not valid.
'#exit-code:1

Module Test

    Public Sub Main()

        Dim ] as string
        
    End Sub
    
End Module